@startuml

class Client

interface Target {
+request():void
}

class Voltage {
-volts:int
}

class Socket {
+getVoltage():Voltage
}


interface SocketAdapter {
+get220Voltage():void
+get110Voltage():void
}

class SocketClassAdapter {
+get220Voltage():void
+get110Voltage():void
-convertVoltage(voltage:int, i:int)
}

class Adaptee {
+specificRequest():void
}

SocketAdapter <|-- SocketClassAdapter
Client --> SocketAdapter
SocketClassAdapter --> Socket

Target <|-- DataAdapter
DataAdapter --> Adaptee
Client --> Target

@enduml